<resources>
    <string name="app_name">吃啥</string>
    <string name="action_settings">设置</string>
    <!-- Strings used for fragments for navigation -->
    <string name="do_it">选择</string>
    <string name="previous">返回</string>

    <string name="first_fragment_label">first_fragment_label</string>
    <string name="second_fragment_label">second_fragment_label</string>

    <string name="main_text">命运的转盘！</string>
    <string name="restaurant_name">餐厅名：</string>
    <string name="restaurant_label">餐厅类别：</string>
    <string name="restaurant_score">餐厅分数：(请输入0-5的浮点数)</string>
    <string name="restaurant_frequency">就餐频率：</string>

    <!-- Strings used for Setting Button-->
    <string name="Add">添加数据</string>
    <string name="Remove">删除</string>
    <string name="Update">更新</string>

    <string name = "database_setting"> 数据库设置 </string>
    <string name="add_restaurant">添加餐厅信息</string>
    <string name = "update_restaurant">更新餐厅信息</string>
</resources>