<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondFragment">

    <TextView
            android:id="@+id/textview_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_restaurant"
            android:textSize="6mm"
            android:textColor="#01438d"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_set"
            />



    <EditText
            android:id="@+id/EditText_add_restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:hint="@string/restaurant_name"
            android:textSize="2.8mm"
            android:maxLines="1"
            android:inputType="textNoSuggestions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.422"/>



    <EditText
            android:id="@+id/EditText_add_restaurant_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:hint="@string/restaurant_score"
            android:textSize="2.8mm"
            android:maxLines="1"
            android:inputType="textNoSuggestions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.5"
    />

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintVertical_bias="0.583"
   >

        <TextView
                android:id="@+id/textview_restaurant_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/restaurant_label"
                android:textSize="2.8mm"

        />
        <Spinner android:id="@+id/Spinner_restaurant_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:entries="@array/labelArray"/>
    </LinearLayout>


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintVertical_bias="0.666" >
        <TextView
                android:id="@+id/add_restaurant_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="2.8mm"
                android:hint="@string/restaurant_frequency"
        />
        <Spinner android:id="@+id/Spinner_restaurant_frequency"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:entries="@array/frequencyArray"/>
    </LinearLayout>



    <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintVertical_bias="0.976"/>
    <Button
            android:id="@+id/button_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.761"/>
</androidx.constraintlayout.widget.ConstraintLayout>